Closed Bug 1335974 Opened 7 years ago Closed 7 years ago

URLCLASSIFIER_UPDATE_ERROR shows a number of unexpected values coming from the server

Categories

(Toolkit :: Safe Browsing, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: francois, Assigned: dimi)

References

Details

(Whiteboard: #sbv4-m5)

Attachments

(1 file)

https://telemetry.mozilla.org/new-pipeline/dist.html#!cumulative=0&end_date=2017-01-30&keys=google!google4!mozilla!other&max_channel_version=nightly%252F54&measure=URLCLASSIFIER_UPDATE_ERROR&min_channel_version=null&product=Firefox&sanitize=1&sort_keys=submissions&start_date=2017-01-23&table=1&trim=1&use_submission_date=0 shows that we are getting a lot of these errors:

- 1 = unspecified error
- 2 = addition of an already existing prefix

and a very small number of these:

- 4 = removal index out of bounds
- 5 = checksum mismatch

We should investigate to see if we can get more details on the "unspecified error" case and whether we can get a sample of #2 that we could send to Google.
Assignee: nobody → dlee
Status: NEW → ASSIGNED
Just a quick update about possible error:

1. Out of memory when generate prefix set
2. file operation error while manipulate database.
3. update when shutdown(Shutdown-Aware code).
4. Invalid update(there is no valid table)
5. No lookup cache for that table
6. Protocol Parser return an error
Blocks: SafeBrowsingv4Telemetry
No longer blocks: safebrowsingv4
Whiteboard: #sbv4-m5
Comment on attachment 8839824 [details]
Bug 1335974 - Add more error codes to URLCLASSIFIER_UPDATE_ERROR.

https://reviewboard.mozilla.org/r/114402/#review116548
Attachment #8839824 - Flags: review?(francois) → review+
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/428e3fea1a3e
Add more error codes to URLCLASSIFIER_UPDATE_ERROR. r=francois
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/428e3fea1a3e
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: