Bug 1335974 - Add more error codes to URLCLASSIFIER_UPDATE_ERROR. r=francois

MozReview-Commit-ID: AAd6Yu0AuUO